--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.52.2",
     "@web3modal/wagmi": "^5.1.3",
     "axios": "^1.7.5",
+    "ethers": "^6.13.4",
     "next": "14.2.6",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
